weird movement of Bone in child of constraint #56975

Closed
opened 2018-09-29 14:57:18 +02:00 by pratik solanki · 11 comments

System Information
ubuntu 16.4

Blender Version
blender 2.8 alpha2 0f9b7560db

Short description of error
Bone movement are not in local space after adding childof constraint

Exact steps for others to reproduce the error

add armature and add 2 bones A and B
add child off constraint in A and select target as bone B
press clear inverse ,and set inverse

now move bone A in any direction it might move as expected , but rotate B in any random direction , and then try moving Bone A ,

Bone A will not move in local space ,

check the blendfile ,
go to frame1 and move bone A , it will move normal ,
got to frame 20 and move Bone A, it will not move as expected
test childoff bone.blend

**System Information** ubuntu 16.4 **Blender Version** blender 2.8 alpha2 0f9b7560db3 **Short description of error** Bone movement are not in local space after adding childof constraint **Exact steps for others to reproduce the error** add armature and add 2 bones A and B add child off constraint in A and select target as bone B press clear inverse ,and set inverse now move bone A in any direction it might move as expected , but rotate B in any random direction , and then try moving Bone A , Bone A will not move in local space , check the blendfile , go to frame1 and move bone A , it will move normal , got to frame 20 and move Bone A, it will not move as expected [test childoff bone.blend](https://archive.blender.org/developer/F4862786/test_childoff_bone.blend)
Author

Added subscriber: @pratiksolanki

Added subscriber: @pratiksolanki

Added subscriber: @mont29

Added subscriber: @mont29

Did you check whether you have same behavior (issue) with 2.79? Can you please attach a 2.79 .blend file with same setup (for comparison)?

Did you check whether you have same behavior (issue) with 2.79? Can you please attach a 2.79 .blend file with same setup (for comparison)?
Author

here is a 2.79 file ,, it works great in 2.79
test childoff bone 2.79.blend

here is a 2.79 file ,, it works great in 2.79 [test childoff bone 2.79.blend](https://archive.blender.org/developer/F4885875/test_childoff_bone_2.79.blend)
Campbell Barton was assigned by Bastien Montagne 2018-10-01 08:14:59 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

OK thanks, can confirm the issue, Grabbing the child bone indeed gives crazy directions once parent one is rotated, in 2.8.

@ideasman42 there is probably something that went wrong at some point in transform code?

OK thanks, can confirm the issue, Grabbing the child bone indeed gives crazy directions once parent one is rotated, in 2.8. @ideasman42 there is probably something that went wrong at some point in transform code?

Added subscriber: @angavrilov

Added subscriber: @angavrilov

To clarify, this is obviously a problem in the transform operators, not the constraints: if you directly change the properties, it works completely as expected.

Basically, Child Of (and any similar constraint) works like real parenting in that it effectively changes the local space coordinate system of the child by left-multiplying a matrix, so the transform operators need to consider that.

To clarify, this is obviously a problem in the transform operators, not the constraints: if you directly change the properties, it works completely as expected. Basically, Child Of (and any similar constraint) works like real parenting in that it effectively changes the local space coordinate system of the child by left-multiplying a matrix, so the transform operators need to consider that.

Caused by 126e6c8e1d, looking further into it.

Caused by 126e6c8e1d, looking further into it.

This issue was referenced by fb8d268f62

This issue was referenced by fb8d268f6212dfc1a27f048eed25e0ae5622d34b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56975
No description provided.