Fix T56975: Transform incorrect w/ constraint