source/blender/blenkernel/intern/armature_update.c
@@ -705,6 +705,7 @@ void BKE_pose_bone_done(struct Depsgraph *depsgraph,
 		copy_m4_m4(pchan_orig->pose_mat, pchan->pose_mat);
 		copy_m4_m4(pchan_orig->chan_mat, pchan->chan_mat);
 		copy_v3_v3(pchan_orig->pose_head, pchan->pose_mat[3]);
+		copy_m4_m4(pchan_orig->constinv, pchan->constinv);
 		BKE_pose_where_is_bone_tail(pchan_orig);
 	}
 }
